Reinstate the 'Switch to Toolbar' option when you chose to stick with the BuddyBar during a 1.6 upgrade. Fixes #3661. Also fixes a problem with extra whitespace in wp-admin when using the BuddyBar.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@6159 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-core/css/buddybar.dev.css
+++ b/bp-core/css/buddybar.dev.css
@@ -1,5 +1,4 @@
-body,
-body.wp-admin {
+body:not(.wp-admin) {
 	padding-top: 25px !important;
 }
 #wp-admin-bar {
